Fix invisible accordion on Android 4

--- a/src/less/accordion.less
+++ b/src/less/accordion.less
@@ -54,4 +54,7 @@
     .accordion-item-expanded > &{
         height: auto;
     }
+    html.android-4 & {
+        .transform(none);
+    }
 }
